# codyslexia

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  CODEOWNERS  CODE_OF_CONDUCT  CONTRIBUTING  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY  go.mod  go.sum  jest.config.ts  jest.preset.js  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  skaffold.yaml  tsconfig.base.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-documentation.md
.github/workflows/: build-devcontainer.yaml  check-graph-schema.yaml  do-not-merge.yaml  lock-threads.yaml  nx-cloud-ci.yml  stale-bot.yaml
.husky/: pre-commit  pre-push
apps/backend/pythonapi/: README.md  project.json  pyproject.toml  pytest.ini
apps/backend/pythonapi/pythonapi/: __init__.py  main.py
apps/backend/pythonapi/tests/: test_main.py
apps/backend/rustapi/: .env.example  Cargo.toml  Dockerfile  README.md  k8s.yaml  project.json
apps/backend/rustapi/src/: main.rs  main.test.rs
plugins/golang/: README.md  executors.json  jest.config.ts  package.json  project.json
plugins/graphql/: jest.config.ts  project.json
plugins/rust/: README.md  executors.json  generators.json  jest.config.ts  project.json
plugins/workspace/: README.md  executors.json  generators.json  jest.config.ts  package.json  project.json
scripts/: check-lock-files.js  chmod.js  commit-lint.js  commitizen.js  eas-build-post-install.mjs  eas-build-pre-install.mjs  install-apollo-router.js  install-apollo-rover.js  preinstall.js  publish-to-npm.js  swagger-autogen.js  swagger_output.json  write-exports.js
tools/eslint-rules/: index.ts  jest.config.ts  project.json
tools/kustomize/: project.json
tools/skaffold/: project.json
tools/terraform/: project.json
(+755 files in other folders)
