[tool.nx]
autoActivate = true

[tool.poetry]
name = "@codyslexia/source"
version = "1.0.0"
description = "Streamlined Cloud Microservices in Go, Python, Rust, and TypeScript"
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"

    [tool.poetry.dependencies.pythonapi]
    path = "apps/backend/pythonapi"
    develop = true

[tool.poetry.group.dev.dependencies]
ruff = "0.1.5"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
