[tool.poetry]
name = "pythonapi"
version = "1.0.0"
description = "A simple Python API example."
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "pythonapi"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "../../../node_modules/.cache/ruff"
