[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.4.1", features = ["v4"] }
